<resources>
    <string name="app_name">Whose Duty Is It Anyway</string>
    <string name="devotions">Devotions:</string>
    <string name="date">Date</string>
    <string name="dishes_duties">Dishes Duties</string>
    <string name="devotions_content">Devotions Content</string>
    <string name="dishes">Dishes:</string>
    <string name="beatiful_day">It\'s a beautiful day!</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="dishes_order">Edit Dishes Order</string>
    <string name="dev_order">Edit Devotions Order</string>
</resources>
